testsuite/tests/rename/should_fail/T12686.stderr

T12686.hs:7:16: error: [GHC-45510]
    Term variable ‘x’ cannot be used here
      (term variables cannot be promoted)

T12686.hs:12:19: error: [GHC-45510]
    Term variable ‘a’ cannot be used here
      (term variables cannot be promoted)
